--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "BusinessHero Tasks API"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asgiref>=3.8.1",
     "flask>=3.1.0",
     "flask-jwt-extended>=4.7.1",
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
+    "uvicorn>=0.34.0",
 ]
