--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.15.2
+asgiref==3.7.2
 blinker==1.9.0
 click==8.1.8
 flask==3.1.0
@@ -6,6 +7,7 @@ flask-jwt-extended==4.7.1
 flask-migrate==4.1.0
 flask-sqlalchemy==3.1.1
 greenlet==3.1.1
+gunicorn==21.2.0
 itsdangerous==2.2.0
 jinja2==3.1.6
 mako==1.3.9
@@ -15,4 +17,5 @@ pyjwt==2.10.1
 python-dotenv==1.1.0
 sqlalchemy==2.0.40
 typing-extensions==4.13.1
+uvicorn==0.29.0
 werkzeug==3.1.3
